--- a/fronted/package.json
+++ b/fronted/package.json
@@ -14,10 +14,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "apexcharts": "^3.28.1",
     "bootstrap": "^5.1.0",
     "jquery": "1.9.1",
     "npm": "^7.22.0",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
