--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "apexcharts": "^3.28.1",
+    "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
     "jquery": "1.9.1",
     "npm": "^7.22.0",
