--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "apexcharts": "^3.28.1",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
+    "date-fns": "^2.23.0",
     "jquery": "1.9.1",
     "npm": "^7.22.0",
     "react": "^17.0.2",
